fixed overflow header

--- a/zlecenie od klienta/src/sass/_components.scss
+++ b/zlecenie od klienta/src/sass/_components.scss
@@ -1,3 +1,15 @@
+.section {
+	padding: 1em 2em;
+
+	&-title {
+		font-weight: 400;
+		padding: 1em 0;
+		text-align: center;
+		font-size: 3rem;
+		text-transform: uppercase;
+	}
+}
+
 .wrapper {
 	margin: 0 auto;
 	width: 100%;
