--- a/zlecenie od klienta/src/sass/_large.scss
+++ b/zlecenie od klienta/src/sass/_large.scss
@@ -40,7 +40,7 @@
 		height: 60vh;
 
 		&__heading {
-			left: 5%;
+			padding-left: 2em;
 		}
 	}
 
@@ -82,7 +82,6 @@
 	// HEADER
 	.header {
 		&__heading {
-			left: 10%;
 			&-text {
 				font-size: 5rem;
 			}
