--- a/zlecenie od klienta/src/sass/_medium.scss
+++ b/zlecenie od klienta/src/sass/_medium.scss
@@ -60,8 +60,7 @@
 		background-image: url(/dist/img/desktop/header-desktop.jpg);
 
 		&__heading {
-			position: relative;
-			left: 2%;
+			padding-left: 2em;
 		}
 	}
 
