--- a/zlecenie od klienta/src/sass/_style.scss
+++ b/zlecenie od klienta/src/sass/_style.scss
@@ -11,18 +11,6 @@ body {
 	background-color: c.$main-bg;
 }
 
-.section {
-	padding: 1em 2em;
-
-	&-title {
-		font-weight: 400;
-		padding: 1em 0;
-		text-align: center;
-		font-size: 3rem;
-		text-transform: uppercase;
-	}
-}
-
 // NAVIGATION
 .nav {
 	position: fixed;
